# gmail-fetcher

./: .dockerignore  .env.example  .env.user-example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_MODES.md  Dockerfile  Dockerfile.distroless  HEADLESS_MODE_VERIFICATION.md  LICENSE  MONITORING_EXAMPLES.md  Makefile  QUERY_EXAMPLES.md  QUICKSTART.md  QUICKSTART_OAUTH.md  RATE_LIMITING.md  README.md  SECURITY.md  SPAM_EXCLUSION_UPDATE.md  UPDATE_SUMMARY.md  docker-compose.distroless.yml  docker-compose.scheduled.yml  docker-compose.yml  gmail-fetcher.py  pyproject.toml  requirements.txt  setup-oauth.sh  setup.sh
docs/: headless-mode.md  oauth-redirect-uri-setup.md  oauth-ssh-setup.md
src/: __init__.py  archiver.py  config.py  dashboard.py  downloader.py  gmail_client.py  main.py  status_writer.py
